# ASTCODA

./: CMakeLists.txt  LICENSE.txt  README.md  embeddings_preferences.json  extractor_preferences.json  model_preferences.json  test_preferences.json
astcoda/: ASTCODA.py  ASTCODAta.py  ASTCODAtrainer.py  token2vec.py  train.py
docs/: ai_example.md  train_embeddings.md
evaluation/: vuldetect_all_lines.txt  vuldetect_vuln_lines.txt
include/: CMakeLists.txt
include/extractor/: Extractor.h
include/model/: Model.h
include/support/: CMakeLists.txt
include/support/ArgParser/: ArgParser.h
include/support/Support/: Support.h
include/support/TreeSitter/: TreeSitter.h
include/visualizer/: Visualizer.h
include/vocab/: Vocabulary.h
labelling/: README.md  outputs_deepseek.json  outputs_openai.json  outputs_qwen.json  problem_stmts_shortened.json
labelling/examples/: s112877031.cpp  s180336410.cpp  s191672447.cpp  s295976724.cpp
lib/: CMakeLists.txt
lib/extractor/: CMakeLists.txt
lib/model/: CMakeLists.txt  Model.cpp
lib/support/ArgParser/: ArgParser.cpp  CMakeLists.txt
lib/support/Support/: Support.cpp
lib/support/TreeSitter/: TreeSitter.cpp
lib/visualizer/: CMakeLists.txt  Visualizer.cpp
lib/vocab/: CMakeLists.txt  Vocabulary.cpp
tools/: CMakeLists.txt  evaluate.cpp  extract.cpp  preprocess.cpp  testmarker.cpp  visualize.cpp  vocabs.cpp
train/: model.ipynb  token2vec.py
